--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Prasath",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.7",
     "express": "^4.18.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
